# add the dynamic array sub-dir
add_subdirectory(list/dynamic_array)

# add the linked_list sub-directory
add_subdirectory(list/linked_list)

# add the doublee_linked_list sub-directory
add_subdirectory(list/double_linked_list)

# add the circular_linked_list sub-directory
add_subdirectory(list/circular_linked_list)

# add the header_linked_list sub-directory
add_subdirectory(list/header_linked_list)

# add the array stack sub-directory
add_subdirectory(stack/stack_arr)

# add the linked list stack sub-directory
add_subdirectory(stack/stack_ll)

# add the linked list queue sub-directory
add_subdirectory(queue/queue_ll)